--- a/app/src/main/res/layout/content_create_new_event.xml
+++ b/app/src/main/res/layout/content_create_new_event.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="25dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="?android:attr/actionBarSize"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
     tools:context="com.kevrain.consensus.activities.CreateNewEventActivity"
     tools:showIn="@layout/activity_create_new_event">
 
     <TextView
-        android:paddingTop="40dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_width="119dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -41,7 +44,7 @@
         android:layout_below="@id/tvEventName"/>
 
     <EditText
-        android:layout_width="128dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etLocation"
         android:layout_toRightOf="@id/tvLocation"
