--- a/app/src/main/res/menu/menu_events.xml
+++ b/app/src/main/res/menu/menu_events.xml
@@ -1,10 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.kevrain.consensus.activities.EventsActivity">
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="1"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="2"
+        android:title="@string/action_logout"
+        app:showAsAction="ifRoom|withText" />
 </menu>
