Add multiple locations to events

--- a/app/src/main/res/layout/activity_create_new_event.xml
+++ b/app/src/main/res/layout/activity_create_new_event.xml
@@ -6,107 +6,114 @@
     tools:context="com.kevrain.consensus.activities.CreateNewEventActivity">
 
     <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
 
-    <TextView
-        android:layout_width="119dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Event Name"
-        android:id="@+id/tvEventName"
+    <RelativeLayout
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_below="@+id/toolbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/etEventName"
-        android:layout_toRightOf="@id/tvEventName"
-        android:layout_gravity="right"
-        android:layout_alignBottom="@+id/tvEventName"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="58dp"
-        android:layout_marginEnd="58dp"
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Event Name"
+            android:id="@+id/tvEventName"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_width="119dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Location"
-        android:id="@+id/tvLocation"
-        android:layout_above="@+id/btnAddDate"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="41dp" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/etEventName"
+            android:layout_toRightOf="@id/tvEventName"
+            android:layout_gravity="right"
+            android:layout_alignBottom="@+id/tvEventName"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
-    <EditText
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/etLocation"
-        android:layout_toRightOf="@id/tvLocation"
-        android:layout_gravity="right"
-        android:layout_alignBottom="@+id/tvLocation"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginEnd="58dp"/>
+        <TextView
+            android:layout_marginTop="40dp"
+            android:id="@+id/tvLocation"
+            android:text="Add locations"
+            android:textColor="@color/colorAccent"
+            android:layout_below="@+id/etEventName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:hint="Add a date"
-        android:id="@+id/btnAddDate"
-        android:onClick="showDatePickerDialog"
-        android:layout_alignLeft="@+id/etLocation"
-        android:layout_alignStart="@+id/etLocation"
-        android:layout_alignBottom="@+id/tvAddDate"
-        android:layout_alignRight="@+id/etLocation"
-        android:layout_alignEnd="@+id/etLocation"
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"/>
+        <View
+            android:id="@+id/dividerLocation"
+            android:layout_below="@+id/tvLocation"
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="25dp"
+            android:layout_height="1dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Add Date "
-        android:id="@+id/tvAddDate"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingTop="40dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginEnd="58dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="Name"
+            android:id="@+id/tvLocationName"
+            android:layout_below="@+id/dividerLocation"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/btnSubmit"
-        android:layout_below="@+id/btnAddDate"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp" />"
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/etLocation"
+            android:layout_toRightOf="@id/tvLocationName"
+            android:layout_gravity="right"
+            android:layout_alignBottom="@+id/tvLocationName"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_below="@+id/tvLocationName"
+            android:text="Date"
+            android:id="@+id/tvAddDate"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Add a date"
+            android:layout_toRightOf="@+id/tvAddDate"
+            android:layout_alignBaseline="@+id/tvAddDate"
+            android:layout_below="@+id/tvLocation"
+            android:id="@+id/btnAddDate"
+            android:onClick="showDatePickerDialog" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Location +"
+            android:id="@+id/btnAdd"
+            android:layout_below="@+id/tvAddDate"
+            android:layout_centerHorizontal="true" />"
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:id="@+id/rvLocations"
+            android:layout_below="@+id/btnAdd"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+    
 </RelativeLayout>
