--- a/app/src/main/res/layout/toolbar_new_event.xml
+++ b/app/src/main/res/layout/toolbar_new_event.xml
@@ -31,6 +31,7 @@
         android:src="@drawable/ic_done"
         android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
+        android:onClick="saveNewEvent"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
         android:layout_height="match_parent" />
