--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -14,10 +14,10 @@
         android:title="EVENTS"
         />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvPolls"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rvPolls"
         android:layout_below="@+id/toolbar"
         />
 
@@ -29,7 +29,7 @@
         android:onClick="onCreateNewEvent"
         android:src="@drawable/ic_plus"
         android:tint="@android:color/white"
-        app:layout_anchor="@id/lvPolls"
+        app:layout_anchor="@id/rvPolls"
         app:layout_anchorGravity="bottom|right|end"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
