--- a/app/src/main/res/layout/activity_create_new_poll.xml
+++ b/app/src/main/res/layout/activity_create_new_poll.xml
@@ -25,8 +25,8 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Event Name"
-            android:id="@+id/tvEventName"
+            android:text="Poll Name"
+            android:id="@+id/tvPollName"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -35,25 +35,25 @@
             android:layout_height="wrap_content"
             android:id="@+id/etEventName"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_toRightOf="@id/tvEventName"
+            android:layout_toRightOf="@id/tvPollName"
             android:layout_gravity="right"
-            android:layout_alignBottom="@+id/tvEventName"
+            android:layout_alignBottom="@+id/tvPollName"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
         <TextView
-            android:id="@+id/tvLocation"
-            android:text="Add locations"
+            android:id="@+id/tvPollOption"
+            android:text="Add Locations"
             android:textColor="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvEventName"
+            android:layout_below="@+id/tvPollName"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <View
-            android:id="@+id/dividerLocation"
-            android:layout_below="@+id/tvLocation"
+            android:id="@+id/dividerPollOption"
+            android:layout_below="@+id/tvPollOption"
             android:background="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_marginBottom="25dp"
@@ -65,18 +65,18 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:text="Name"
-            android:id="@+id/tvLocationName"
-            android:layout_below="@+id/dividerLocation"
+            android:id="@+id/tvPollOptionName"
+            android:layout_below="@+id/dividerPollOption"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/etLocation"
-            android:layout_toRightOf="@id/tvLocationName"
+            android:id="@+id/etPollOption"
+            android:layout_toRightOf="@id/tvPollOptionName"
             android:layout_gravity="right"
-            android:layout_alignBottom="@+id/tvLocationName"
+            android:layout_alignBottom="@+id/tvPollOptionName"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
@@ -86,7 +86,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Date"
             android:id="@+id/tvAddDate"
-            android:layout_below="@+id/tvLocationName"
+            android:layout_below="@+id/tvPollOptionName"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -111,7 +111,7 @@
             android:layout_centerHorizontal="true" />"
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvLocations"
+            android:id="@+id/rvPollOptions"
             android:layout_width="match_parent"
             android:layout_height="99dp"
             android:layout_below="@+id/btnAdd"
