--- a/app/src/main/res/layout/item_poll.xml
+++ b/app/src/main/res/layout/item_poll.xml
@@ -9,13 +9,13 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignParentLeft="true"
-        android:text="@string/event_name"
-        android:id="@+id/tvEventName" />
+        android:text="@string/poll_name"
+        android:id="@+id/tvPollName" />
 
     <TextView
-        android:id="@+id/tvLocationCount"
+        android:id="@+id/tvPollOptionCount"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvEventName"
+        android:layout_below="@+id/tvPollName"
         android:textColor="@android:color/darker_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
