--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tvLocationListName"
+        android:id="@+id/tvPollOptionListName"
         android:layout_gravity="left"
         android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/tvLocationListDate"
+        android:id="@+id/tvPollOptionListDate"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_weight="1"
         android:layout_gravity="right"
