--- a/app/src/main/res/layout/item_select_friend.xml
+++ b/app/src/main/res/layout/item_select_friend.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:layout_margin="5dp">
 
     <TextView
@@ -10,18 +10,26 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/tvFriendName"
-        android:layout_toRightOf="@+id/checkBox"
-        android:layout_alignBottom="@id/checkBox"
-        android:gravity="center_horizontal"
-        android:paddingBottom="8dp"
+        android:layout_toRightOf="@+id/ivProfile"
+        android:layout_centerVertical="true"
         android:textColor="@color/colorBlack"/>
+
+    <ImageView
+        android:padding="5dp"
+        android:layout_width="@dimen/profile_image_width"
+        android:layout_height="@dimen/profile_image_height"
+        android:text="New Text"
+        android:id="@+id/ivProfile"
+        android:scaleType="centerCrop"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_alignTop="@id/tvFriendName"/>
 
 </RelativeLayout>
