--- a/app/src/main/res/layout/activity_create_new_group.xml
+++ b/app/src/main/res/layout/activity_create_new_group.xml
@@ -1,69 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".activities.CreateOrEditGroupActivity">
+    android:fitsSystemWindows="true"
+    tools:context="com.kevrain.consensus.activities.CreateOrEditGroupActivity">
 
-
-    <Button
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:id="@+id/btnSave"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/btnCancel"
-        android:layout_toStartOf="@+id/btnCancel"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:id="@+id/btnCancel"
-        android:layout_alignTop="@+id/btnSave"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:title="@string/edit_group"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Group Name"
-        android:id="@+id/tvGroupName"
-        android:layout_alignTop="@+id/etGroupName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/etGroupName"/>
+    </android.support.design.widget.AppBarLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter group name here..."
-        android:id="@+id/etGroupName"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/btnCancel"
-        android:layout_alignEnd="@+id/btnCancel"/>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvAddFriends"
-        android:layout_alignRight="@+id/btnCancel"
-        android:layout_alignEnd="@+id/btnCancel"
-        android:layout_above="@+id/btnSave"
-        android:layout_below="@+id/tvAddFriends"/>
+    <include layout="@layout/content_create_new_group" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Friends"
-        android:id="@+id/tvAddFriends"
-        android:layout_below="@+id/tvGroupName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
