--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:title="EVENTS"
+        android:title="@string/poll_title"
         />
 
     <android.support.v7.widget.RecyclerView
