--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -15,4 +15,51 @@
         android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/imgGroupCollage1"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="left"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/imgGroupCollage4"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="left"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/imgGroupCollage1"/>
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/imgGroupCollage2"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="right"
+            android:layout_alignParentRight="true"/>
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/imgGroupCollage3"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/imgGroupCollage2"/>
+
+    </RelativeLayout>
+
+
+
 </LinearLayout>
