--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -23,6 +23,8 @@
 
     <include layout="@layout/content_groups" />
 
+    <include layout="@layout/view_progress_indicator" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddGroup"
         android:layout_width="wrap_content"
