--- a/app/src/main/res/layout/activity_polls.xml
+++ b/app/src/main/res/layout/activity_polls.xml
@@ -21,6 +21,8 @@
         android:layout_below="@+id/toolbar"
         />
 
+    <include layout="@layout/view_progress_indicator" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabCreateEvent"
         android:layout_width="wrap_content"
