--- a/app/src/main/res/layout/item_poll.xml
+++ b/app/src/main/res/layout/item_poll.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/activity_vertical_margin">
-
-    <TextView
-        android:layout_width="wrap_content"
+<FrameLayout android:layout_width="match_parent"
+     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content">
+    <RelativeLayout
+        android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_alignParentLeft="true"
-        android:text="@string/poll_name"
-        android:id="@+id/tvPollName" />
+        android:background="?android:attr/windowBackground"
+        android:padding="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/tvPollOptionCount"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvPollName"
-        android:textColor="@android:color/darker_gray"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_alignParentLeft="true"
+            android:text="@string/poll_name"
+            android:id="@+id/tvPollName" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvPollOptionCount"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/tvPollName"
+            android:textColor="@android:color/darker_gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+</FrameLayout>
