--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -22,4 +22,14 @@
         android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvPollOptionListDate"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_weight="1"
+        android:layout_gravity="right"
+        android:gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
