--- a/app/src/main/res/layout/toolbar_new_poll.xml
+++ b/app/src/main/res/layout/toolbar_new_poll.xml
@@ -31,7 +31,7 @@
         android:src="@drawable/ic_done"
         android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
-        android:onClick="saveNewPoll"
+        android:onClick="savePoll"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
         android:layout_height="match_parent" />
