--- a/app/src/main/res/layout/item_poll_option.xml
+++ b/app/src/main/res/layout/item_poll_option.xml
@@ -1,35 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:weightSum="3"
-    android:gravity="center"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tvPollOptionListName"
-        android:layout_gravity="left"
-        android:layout_weight="1"
+        android:id="@+id/tvPollOptionListDayOfWeek"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/darker_gray"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvPollOptionListDate"
+        android:textAppearance="@style/AppTheme.Widget.TextView.Bold.ExtraLarge"
+        android:textColor="@android:color/darker_gray"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_below="@+id/tvPollOptionListDayOfWeek"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvPollOptionListMonth"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/darker_gray"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_below="@+id/tvPollOptionListDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvPollOptionListName"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_toRightOf="@+id/tvPollOptionListDate"
+        android:layout_alignBaseline="@+id/tvPollOptionListDate"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:ellipsize="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/tvPollOptionListDate"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_weight="1"
-        android:layout_gravity="right"
-        android:gravity="right"
+        android:id="@+id/tvPollOptionVoteCount"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentRight="true"
+        android:layout_alignBaseline="@+id/tvPollOptionListName"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tvPollOptionListDate"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_weight="1"
-        android:layout_gravity="right"
-        android:gravity="right"
+    <CheckBox
+        android:id="@+id/cbPollOptionVote"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+</RelativeLayout>
