--- a/app/src/main/res/layout/toolbar_new_poll.xml
+++ b/app/src/main/res/layout/toolbar_new_poll.xml
@@ -10,6 +10,7 @@
         android:src="@drawable/ic_close"
         android:layout_width="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
         android:onClick="closeActivity"
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_alignParentRight="true"
         android:onClick="savePoll"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="@android:color/transparent"
         android:tint="@android:color/white"
         android:layout_height="match_parent" />
