--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorAccent">#00BCD4</color>
     <color name="colorBlack">#000000</color>
     <color name="colorEditItemDivider">#CFD2D5</color>
+    <color name="white_transparent">#80FFFFFF</color>
+    <color name="gray_transparent">#FFC0C0C0</color>
 </resources>
