--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,21 @@
         <item name="fontPath">fonts/HelveticaNeue-Medium.ttf</item>
         <item name="android:textSize">18sp</item>
     </style>
+
+    <style name="AppTheme.Widget.TextView.Bold.ExtraLarge" parent="android:Widget.Holo.Light.TextView">
+        <item name="fontPath">fonts/HelveticaNeue-Medium.ttf</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="AppTheme.Widget.TextView.FloatedTextHint" parent="android:Widget.Holo.Light.TextView">
+        <item name="android:textColor">@color/white_transparent</item>
+    </style>
+
+    <style name="AppTheme.DefaultMargins" parent="AppTheme">
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+    </style>
+
 </resources>
